--- a/apartaments/templates/header.html
+++ b/apartaments/templates/header.html
@@ -46,7 +46,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Profilis</a>
+            <a class="nav-link" href="{{ url_for('profile_page') }}">Profilis</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Antras</a>
@@ -67,7 +67,7 @@
         </ul>
         <div class="col-md-3 text-end">
 
-            <a href="" type="button" class="btn btn-light text-dark me-2">Prisijungti</a>
+            <a href="{{ url_for('login') }}" type="button" class="btn btn-light text-dark me-2">Prisijungti</a>
             <a href="{{ url_for('register') }}" type="button" class="btn btn-light text-dark me-2">Registruotis</a>
         </div>
       </div>
