--- a/apartaments/templates/register.html
+++ b/apartaments/templates/register.html
@@ -28,11 +28,17 @@
           {{ form.password.label(class_="form-label mt-4") }}
           {{ form.password(class_="form-control", size=32) }}
         </div>
+        <div class="form-group">
+          {{ form.confirm_password.label(class_="form-label mt-4") }}
+          {{ form.confirm_password(class_="form-control", size=32) }}
+        </div>
         <div class="d-grid gap-2 d-md-block text-center">
             {{ form.submit(class_="btn btn-primary form-label mt-4") }}
         </div>
-
       </form>
+      <div class="alert alert-light text-center" role="alert">
+         <a href="{{ url_for('login') }}" class="alert-link alert-primary">Norite prisiregistruoti kaip nuomotojas?</a>
+      </div>
 
     </div>
   </div>
