--- a/apartments/templates/booking-history.html
+++ b/apartments/templates/booking-history.html
@@ -1,30 +1,36 @@
 {% include "header.html" %}
-<div class="px-4 py-5 my-5 text-center">
-  {% if history %}
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Type</th>
-        <th scope="col">Column heading</th>
-        <th scope="col">Column heading</th>
-        <th scope="col">Column heading</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for hist in history %}
+
+<div class="container">
+  <div class="px-4 py-5 my-5 text-center">
+    {% if history %}
+    <table class="table table-hover">
+      <thead>
         <tr>
-          <th scope="row">{{ hist.id }}</th>
-          <td>{{ hist.arrival_date}}</td>
-          <td>{{ hist.departure_date}}</td>
-          <td>{{ hist.num_of_persons}}</td>
+          <th scope="col">ID</th>
+          <th scope="col">Column heading</th>
+          <th scope="col">Column heading</th>
+          <th scope="col">Column heading</th>
+          <th scope="col">Rašyti atsiliepimą</th>
+          <th scope="col">Redaguoti atsiliepimą</th>
         </tr>
-      {% endfor %}
-  {% else %}
-    <h3>Jūsų neturi užsakymų istorijos</h3>
-  {% endif %}
+      </thead>
+      <tbody>
+        {% for hist in history %}
+          <tr>
+            <th scope="row">{{ hist.id }}</th>
+            <td>{{ hist.arrival_date}}</td>
+            <td>{{ hist.departure_date}}</td>
+            <td>{{ hist.num_of_persons}}</td>
+            <td><a class="btn btn-link" href="{{ url_for('create_feedback', booking_id=hist.id) }}">Rašyti atsiliepimą</a></td>
+            <td><a class="btn btn-link" href="{{ url_for('edit_feedback', booking_id=hist.id) }}">Redaguoti atsiliepimą</a></td>
+          </tr>
+        {% endfor %}
+    {% else %}
+      <h3>Jūsų neturi užsakymų istorijos</h3>
+    {% endif %}
 
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
 </div>
-
 {% include "footer.html" %}
