--- a/apartments/templates/apartment.html
+++ b/apartments/templates/apartment.html
@@ -26,19 +26,70 @@
 
           <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
           <hr>
-          <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be
-            on the lookout for this exact same string of text.</p>
-          <h2>Blockquotes</h2>
-          <p>This is an example blockquote in action:</p>
-          <blockquote class="blockquote">
-            <p>Quoted text goes here.</p>
-          </blockquote>
-          <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be
-            on the lookout for this exact same string of text.</p>
+
         </article>
 
-        {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
 
+
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Card title</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Launch demo modal
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="form-group">
+                      {{ form.arrival_date.label(class_="form-label mt-4") }}
+                      {{ form.arrival_date(class_="form-control", size=32) }}
+                    </div>
+                    <div class="form-group">
+                      {{ form.departure_date.label(class_="form-label mt-4") }}
+                      {{ form.departure_date(class_="form-control", size=32) }}
+                    </div>
+                    <div class="form-group">
+                      {{ form.people_nr.label(class_="form-label mt-4") }}
+                      {{ form.people_nr(class_="form-control", size=32) }}
+                    </div>
+
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <div class="d-grid gap-2 d-md-block text-center">
+                      {{ form.submit(class_="btn btn-primary") }}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div class="my-3 p-3 bg-body rounded shadow-sm">
+          <h6 class="border-bottom pb-2 mb-0">Atsiliepimai</h6>
+          <div class="d-flex text-muted pt-3">
+            <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text>
+            </svg>
+
+            <p class="pb-3 mb-0 small lh-sm border-bottom">
+              <strong class="d-block text-gray-dark">@username</strong>
+              Some representative placeholder content, with some information about this user. Imagine this being some sort of status update, perhaps?
+            </p>
+          </div>
+        </div>
       </div>
 
       <div class="col-md-4">
@@ -56,4 +107,4 @@
     </div>
   </div>
 </div>
-  {% include "footer.html" %}
+{% include "footer.html" %}
