--- a/apartments/templates/admin-list.html
+++ b/apartments/templates/admin-list.html
@@ -13,26 +13,50 @@
           <th scope="col">El. paštas</th>
           <th scope="col">Slapyvardis</th>
           <th scope="col">Tel. numeris</th>
-          <th scope="col">Panaikinti naudotoją</th>
           <th scope="col">Peržiūrėti atsiliepimus</th>
+          <th scope="col">Panaikinti naudotoją</th>
         </tr>
       </thead>
       <tbody>
         {% for user in user_list %}
-          <tr>
-            <th scope="row">{{ user.id }}</th>
-            <td>{{ user.name }}</td>
-            <td>{{ user.last_name }}</td>
-            <td>{{ user.email }}</td>
-            <td>{{ user.username }}</td>
-            <td>{{ user.phone_number }}</td>
-            <td><a class="btn btn-link" href="#">Panaikinti naudotoją</a></td>
-            <td><a class="btn btn-link" href="#">Peržiūrėti atsiliepimus</a></td>
-          </tr>
+        <tr>
+          <th scope="row">{{ user.id }}</th>
+          <td>{{ user.name }}</td>
+          <td>{{ user.last_name }}</td>
+          <td>{{ user.email }}</td>
+          <td>{{ user.username }}</td>
+          <td>{{ user.phone_number }}</td>
+          <td><a class="btn btn-link" href="{{ url_for('show_feedback_list', user_id=user.id)}}">Peržiūrėti atsiliepimus</a></td>
+          <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myOutput{{ user.id }}">Ištrinti</button></td>
+        </tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
 </div>
+
+{% for user in user_list %}
+ <!-- Modal -->
+  <div class="modal fade" id="myOutput{{ user.id }}" role="dialog">
+    <div class="modal-dialog modal-lg">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+<!--          <button type="button" class="close" data-dismiss="modal">&times;</button>-->
+          <h4 class="modal-title">Pranešimas</h4>
+        </div>
+        <div class="modal-body">
+          <p> Ar tikrai norite pašalinti naudotoją {{ user.name }} {{ user.last_name }}?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-bs-dismiss="modal">Uždaryti</button>
+          <a href="{{ url_for('delete_user', user_id=user.id) }}" type="button" class="btn btn-primary">Pašalinti</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+{% endfor %}
 
 {% include "footer.html" %}
