--- a/apartments/templates/apartment.html
+++ b/apartments/templates/apartment.html
@@ -7,16 +7,12 @@
 <div class="container col-xxl-8 px-4 py-5">
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
     <div class="col-10 col-sm-8 col-lg-6">
-      <img src="{{ url_for('static', filename='img/hotel.jpg') }}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      <img src="{{ apartment.img_url }}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
     </div>
     <div class="col-lg-6">
-      <h1 class="display-5 fw-bold lh-1 mb-3">Apartamentų pavadinimas</h1>
+      <h1 class="display-5 fw-bold lh-1 mb-3">{{ apartment.apartment_name}}</h1>
       <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and
         powerful JavaScript plugins.</p>
-      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
-      </div>
     </div>
     <div class="row g-5">
       <div class="col-md-8">
@@ -30,54 +26,24 @@
         </article>
 
 
-
         <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              Launch demo modal
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    <div class="form-group">
-                      {{ form.arrival_date.label(class_="form-label mt-4") }}
-                      {{ form.arrival_date(class_="form-control", size=32) }}
-                    </div>
-                    <div class="form-group">
-                      {{ form.departure_date.label(class_="form-label mt-4") }}
-                      {{ form.departure_date(class_="form-control", size=32) }}
-                    </div>
-                    <div class="form-group">
-                      {{ form.people_nr.label(class_="form-label mt-4") }}
-                      {{ form.people_nr(class_="form-control", size=32) }}
-                    </div>
-
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <div class="d-grid gap-2 d-md-block text-center">
-                      {{ form.submit(class_="btn btn-primary") }}
-                    </div>
-                  </div>
-                </div>
-              </div>
+          {% for room, type in rooms %}
+            <div class="card-body">
+              <h4 class="card-title">Pavadinimas</h4>
+              <h6 class="card-subtitle mb-2 text-muted"> Kaina už parą: {{ type.price_for_night }}</h6>
+              <p class="card-text">{{ room.text }}</p>
+              <p class="card-text">Lovų skaičius: {{ type.number_of_beds }}</p>
+              <!-- Button trigger modal -->
+              <a href="{{ url_for('book_room', room_id=room.id) }}" type="button" class="btn btn-primary">
+                Pasirinkti kambarį
+              </a>
             </div>
-          </div>
+            <hr>
+          {% endfor %}
         </div>
-        <hr>
         <div class="my-3 p-3 bg-body rounded shadow-sm">
           <h6 class="border-bottom pb-2 mb-0">Atsiliepimai</h6>
+          {% for feedback, tenant, user in feedbacks_list %}
           <div class="d-flex text-muted pt-3">
             <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false">
               <title>Placeholder</title>
@@ -85,10 +51,11 @@
             </svg>
 
             <p class="pb-3 mb-0 small lh-sm border-bottom">
-              <strong class="d-block text-gray-dark">@username</strong>
-              Some representative placeholder content, with some information about this user. Imagine this being some sort of status update, perhaps?
+              <strong class="d-block text-gray-dark">{{ user.name }} {{ user.last_name }}</strong>
+              {{ feedback.comment }}
             </p>
           </div>
+          {% endfor %}
         </div>
       </div>
 
@@ -96,15 +63,23 @@
         <div class="position-sticky" style="top: 2rem;">
           <div class="p-4 mb-3 bg-light rounded">
             <h4 class="fst-italic">Žemėlapis</h4>
-            <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+            <a href="{{ url_for('show_map', apartment_id=apartment.id) }}" type="button" class="btn btn-dark">Peržiūrėti žemėlapį</a>
           </div>
           <div class="p-4 mb-3 bg-light rounded">
             <h4 class="fst-italic">Orų prognozė</h4>
-            <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+              <p>Pateikiama 5-ių ateinančių dienų orų prognozė</p>
+                <ul class="list-group">
+                  <li class="list-group-item">Šiandien: {{ weather.get(0)[0] }}°C, {{ weather.get(0)[1] }}</li>
+                  <li class="list-group-item">Rytoj: {{ weather.get(1)[0] }}°C, {{ weather.get(1)[1] }}</li>
+                  <li class="list-group-item">Po 2-iejų dienų: {{ weather.get(2)[0] }}°C, {{ weather.get(2)[1] }}</li>
+                  <li class="list-group-item">Po 3-ijų dienų: {{ weather.get(3)[0] }}°C, {{ weather.get(3)[1] }}</li>
+                  <li class="list-group-item">Po 4-ių dienų: {{ weather.get(4)[0] }}°C, {{ weather.get(4)[1] }}</li>
+                </ul>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 {% include "footer.html" %}
