--- a/apartments/templates/booking-history.html
+++ b/apartments/templates/booking-history.html
@@ -6,23 +6,27 @@
     <table class="table table-hover">
       <thead>
         <tr>
-          <th scope="col">ID</th>
-          <th scope="col">Column heading</th>
-          <th scope="col">Column heading</th>
-          <th scope="col">Column heading</th>
+          <th scope="col">Nr.</th>
+          <th scope="col">Apartamentų pavadinimas</th>
+          <th scope="col">Atvykimo data</th>
+          <th scope="col">Išvykimo data</th>
+          <th scope="col">Kaina</th>
+          <th scope="col">Žmonių kiekis</th>
           <th scope="col">Rašyti atsiliepimą</th>
           <th scope="col">Redaguoti atsiliepimą</th>
         </tr>
       </thead>
       <tbody>
-        {% for hist in history %}
+        {% for booking, r1, r2, room, apartment, bill, payment in history %}
           <tr>
-            <th scope="row">{{ hist.id }}</th>
-            <td>{{ hist.arrival_date}}</td>
-            <td>{{ hist.departure_date}}</td>
-            <td>{{ hist.num_of_persons}}</td>
-            <td><a class="btn btn-link" href="{{ url_for('create_feedback', booking_id=hist.id) }}">Rašyti atsiliepimą</a></td>
-            <td><a class="btn btn-link" href="{{ url_for('edit_feedback', booking_id=hist.id) }}">Redaguoti atsiliepimą</a></td>
+            <th scope="row">{{ booking.id }}</th>
+            <td>{{ apartment.apartment_name }}</td>
+            <td>{{ booking.arrival_date }}</td>
+            <td>{{ booking.departure_date }}</td>
+            <td>{{ payment.full_price }}</td>
+            <td>{{ booking.num_of_persons }}</td>
+            <td><a class="btn btn-link" href="{{ url_for('create_feedback', booking_id=booking.id) }}">Rašyti atsiliepimą</a></td>
+            <td><a class="btn btn-link" href="{{ url_for('edit_feedback', booking_id=booking.id) }}">Redaguoti atsiliepimą</a></td>
           </tr>
         {% endfor %}
     {% else %}
