--- a/apartments/templates/header.html
+++ b/apartments/templates/header.html
@@ -52,6 +52,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Nuomotojo valdymas</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('view_bookings_list') }}">Užsakymai</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
             <div class="dropdown-menu">
